# jutsu-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci_cd.yml
src/: ast.rs  cli.rs  grammar.rs  inference.rs  lexer.rs  main.rs  memory.rs  parser.rs  tgn_pm.rs
src/evaluator/: expressions.rs  mod.rs  rag.rs  statements.rs
src/parser/: ai.rs  expressions.rs  mod.rs  statements.rs  system.rs  tests.rs
